tests/ui/consts/const-for-feature-gate.stderr
error[E0277]: the trait bound `std::ops::Range<{integer}>: const Iterator` is not satisfied
  --> $DIR/const-for-feature-gate.rs:4:14
   |
LL |     for _ in 0..5 {}
   |              ^^^^ required by a bound introduced by this call
   |
note: trait `Iterator` is implemented but not `const`
  --> $SRC_DIR/core/src/iter/range.rs:LL:COL
   = note: required for `std::ops::Range<{integer}>` to implement `const IntoIterator`

error[E0277]: the trait bound `std::ops::Range<{integer}>: const Iterator` is not satisfied
  --> $DIR/const-for-feature-gate.rs:4:14
   |
LL |     for _ in 0..5 {}
   |              ^^^^
   |
note: trait `Iterator` is implemented but not `const`
  --> $SRC_DIR/core/src/iter/range.rs:LL:COL

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
